# tubaf-gripper

./: .gitignore  Dockerfile  README.md
docker/: Dockerfile  (+2 more)
tbf_gripper_autonomy/: CMakeLists.txt  README.md  package.xml  setup.py  tbf_gripper_autonomy.files  tbf_gripper_autonomy.workspace
tbf_gripper_autonomy/config/: arm_params.yaml  controller_params.yaml  equipment_task.yaml  haf_client_params.yaml  haf_server_params.yaml  hand_params.yaml  moveit_params.yaml  pose_client.yaml  pose_generator.yaml  scan_task.yaml  se_ohne_henkel.yaml  smart_equipment.yaml  std_params.yaml
tbf_gripper_autonomy/docker/: Dockerfile  entrypoint.sh
tbf_gripper_autonomy/include/: planningwrapper.h
tbf_gripper_autonomy/launch/: client.launch  controller.launch  experiment.launch  haf_server.launch  hand.launch  test.launch  test_arm.launch  test_equipment_controller.launch  test_moveit_interface.launch  test_planning.launch  test_release.launch  test_z_rotation.launch
tbf_gripper_autonomy/muxify/: from_bag.xml  grasping.xml  test_ik.xml
tbf_gripper_autonomy/notebook/: Evaluate Transformations.ipynb  evaluate_set_task.ipynb
tbf_gripper_autonomy/python/: controller.py
tbf_gripper_autonomy/python/autonomy/: CalibrationCalculator.py  CalibrationCameraEEMoveTask.py  EquipmentTask.py  EvaluatePoseGenerator.py  MonteCarloClusterPoseGenerator.py  MoveitInterface.py  PoseGenerator.py  ScanTask.py  Task.py
tbf_gripper_autonomy/python/evaluation/: EvaluateEquipmentTask.py
tbf_gripper_autonomy/python/grasping/: __init__.py  arm.py  haf_client.py  hand.py
tbf_gripper_autonomy/rviz/: experiment_set.rviz
tbf_gripper_autonomy/scripts/: calibration_from_pickle.py  evaluate_bag.py  evaluate_parallel.py  exp_set_ssb.py  run_client.py  run_set_pose_generators.py  test_release.py  test_set_pose_generation_client.py  test_z_rotation.py
tbf_gripper_autonomy/src/: controller.py  haf_client.py  planning.cpp  planningwrapper.cpp
tbf_gripper_autonomy/srv/: GenerateSetPose.srv
tbf_gripper_hand/: CMakeLists.txt  README.md  package.xml  setup.py
tbf_gripper_hand/action/: RobotiqGripper.action
tbf_gripper_hand/scripts/: HandTcpInterface.py  RobotiqJointStatePublisher.py  dummy_gripper_action_server.py  test_hand_actions.py
tbf_gripper_hand/src/: HandTcpInterface.py  RobotiqJointStatePublisher.py  SchnickDemo.py  robotiqgripper_client.cpp  robotiqgripper_server.cpp
tbf_gripper_perception/: CMakeLists.txt  package.xml  setup.py
tbf_gripper_perception/config/: box1_sizes.yaml  detection.linemod.ros.ork  detection.ros.ork  detection.tabletop.ros.ork  detection.tod.example.ork  floor_filter.yaml  icp_matching.cfg  matching.yaml  object_filter.yaml  planing_interface.yaml  rviz_view.rviz  surface_matching.cfg  surface_matching.yaml  training.linemod.ros.ork  wlanbox_sizes.yaml
tbf_gripper_perception/include/: drostobjectsearch.h  helperfunctions.h
tbf_gripper_perception/launch/: box1.launch  detection.launch  exp_device.launch  icp_matching.launch  matching.launch  model_tracker.launch  ork_client.launch  ork_server.launch  ork_tabletop.launch  planing_interface.launch  planning_interface.launch  recognition.launch  reg_box1.launch  surface_matching.launch  test_wlanbox_model.launch  wlanbox.launch
tbf_gripper_perception/meshes/: marker.dae  marker_v2.dae  wlanStation_DD.blend  wlanStation_DD.blend1  wlanStation_DD.blend2  wlanStation_SG.blend  wlanStation_SG.blend1  wlan_DD.mtl  wlan_blender.ply  wlan_blender.stl  wlan_blender_origin_is_mass.ply  wlan_blender_origin_is_mass.stl  wlan_box.ply  wlan_box.stl  wlan_box_pv.ply  wlan_box_pv_bin.ply
tbf_gripper_perception/msg/: DetectedObject.msg
tbf_gripper_perception/muxify/: local_object_search.xml  ork_xtion.xml
tbf_gripper_perception/scripts/: detect_ssb.py  marker_reg.py  model_tracker.py  pl_interface.py  posegenerator_client.py  rot_test.py
tbf_gripper_perception/src/: cvicpobjectsearch.cpp  drostobjectsearch.cpp  helperfunctions.cpp  icp_matching.cpp  icpobjectsearch.cpp  objectsearch.cpp  pclicpobjectsearch.cpp  surface_matching.cpp
tbf_gripper_perception/srv/: IdentifyFloor.srv  ObjectClassifierService.srv  TogglePerception.srv
tbf_gripper_perception/urdf/: exp.urdf.xacro  marker_macro.urdf.xacro  wlanbox_model.urdf.xacro
tbf_gripper_rqt/: CMakeLists.txt  finger_plugin.xml  gripper_plugin.xml  hand_plugin.xml  package.xml  setup.py
tbf_gripper_rqt/resource/: Gripper.ui  RobotiqMain.ui  WideGripper.ui  gca.ui
tbf_gripper_rqt/scripts/: RobotiqHand
tbf_gripper_tools/: CMakeLists.txt  package.xml  setup.py
tbf_gripper_tools/config/: camera_calib_ee_task.yaml  meshes.yaml  smart_equipment.yaml  water_sample_task.yaml  wlan_station_set_task.yaml
tbf_gripper_tools/launch/: camera_ee_acquisition.launch  camera_ee_calib.launch  camera_ee_task.launch  camera_service_interface.launch  camera_transform_icp.launch  camera_transform_rgbd.launch  mesh_importer.launch  pick_n_place_demo.launch  schnick_demo.launch  smart_equipment_demo.launch  test_moveit_ik.launch  test_moveit_scene_interaction.launch  test_ssb_marker.launch  water_sample_task.launch  wlan_set_bag.launch  wlan_set_demo.launch
tbf_gripper_tools/muxify/: wlan_set_m1.xml
tbf_gripper_tools/scripts/: PnPwlanDemo.py  SchnickDemo.py  ax_xb.py  calib_camera_ee_computation.py  calib_camera_ee_task.py  calib_camera_ee_transformation.py  calibrate_camera_end_effector_transformation.py  camera_service_interface.py  catch_armarker.py  compute_cloud_transform.py  eef_camera_pose_publisher.py  markerarray_to_pointcloud.py  matrix_multi.py  move_middlefinger2pose.py  peopletrack_demo.py  pickle_camera_ee_data.py  pickle_pose_publisher.py  press_demo.py  smart_equipment_set.py  test_compute_ik_service.py  test_moveit_scene_interaction.py  water_sample_task.py  wlan_pick_demo.py  wlan_set_task.py
tbf_gripper_tools/src/: ARCatcher.py  DemoState.py  DemoStatus.py  GripperInterface.py  GripperState.py  helperfunctions.cpp  mesh_importer.cpp
tbf_gripper_tools/srv/: CalcPointCloudTransform.srv  GetCameraTransform.srv
tubaf_gripper/: CMakeLists.txt  package.xml
(+179 files in other folders)
