<?xml version="1.0"?>
<package format="2">
  <name>tbf_gripper_hand</name>
  <version>0.0.0</version>
  <description>The tbf_gripper_hand package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="Steve.Grehl@informatik.tu-freiberg.de">grehl</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <depend>actionlib_msgs</depend>
  <depend>robotiq_3f_gripper_control</depend>
  <depend>control_msgs</depend>
  <depend>tbf_gripper_viz</depend>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
