<?xml version="1.0"?>
<package>
  <name>tbf_gripper_tools</name>
  <version>0.0.0</version>
  <description>The tbf_gripper_tools package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="Steve.Grehl@informatik.tu-freiberg.de">grehl</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>shape_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>libpcl-all</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>geometric_shapes</run_depend>
  <run_depend>cv_bridge</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
