<?xml version="1.0"?>
<package format="2">
  <name>tbf_gripper_tools</name>
  <version>0.0.0</version>
  <description>The tbf_gripper_tools package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="Steve.Grehl@informatik.tu-freiberg.de">Steve Grehl</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <depend>shape_msgs</depend>
  <depend>libpcl-all-dev</depend>
  <depend>geometric_shapes</depend>
  <depend>cv_bridge</depend>
  <depend>tubaf_tools</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
